# EIR

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  NOTICE  Pipfile  README.md  codecov.yml  mypy.ini  no_consent_test.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run_lasso_benchmark.sh  run_mgmoe_benchmark.sh  run_mlp-split_benchmark.sh  run_mlp_benchmark.sh  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: build.yml  coverage.yml  release.yml  test.yml
config/: build.spec  make_dataset.spec  predict.spec  train.spec
docs/: acknowledgements.rst  api_reference.rst  automake_docs.py  binaries_guide.rst  build_acks.py  conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: api_index.rst  api_reference.rst  fusion_configs.rst  global_configs.rst  image_models.rst  sequence_models.rst  tensor_broker_configs.rst
docs/configuration_guides/: global_template.yaml  guides_index.rst
docs/design/: design.rst
docs/doc_data/: 2025-03-07.json  2025-04-15.json  comparison-2025-03-07--2025-04-15.json
docs/doc_modules/: a_basic_tutorial.py  b_tabular_tutorial.py  c_sequence_tutorial.py  d_pretrained_models_tutorial.py  data.py  deploy_experiments_utils.py  deployment_experiments.py  e_image_tutorial.py  experiments.py  f_binary_tutorial.py  serve_experiments_utils.py  serving_experiments.py  utils.py
docs/doc_scripts/: doc_compare_reports.py  doc_performance_report.py
docs/other/: 01_survival_genotypes.rst
docs/tutorials/: 01_basic_tutorial.rst  02_tabular_tutorial.rst  03_sequence_tutorial.rst  04_pretrained_sequence_tutorial.rst  05_image_tutorial.rst  06_raw_bytes_tutorial.rst  07_multimodal_tutorial.rst  08_array_tutorial.rst  tutorial_index.rst
docs/user_guides/: frequently_asked_questions.rst  streaming.rst  streaming_data_types.rst  streaming_implementation.rst  user_guides_index.rst
eir/: __init__.py  build_module.py  configuration.py  deploy.py  predict.py  serve.py  train.py
eir/config/: config.py  schemas.py
eir/data_load/: data_augmentation.py  data_loading_funcs.py  data_utils.py  datasets.py  label_setup.py  storage_engine.py
eir/deploy_modules/: deploy_api.py  deploy_experiment_io.py  deploy_input_setup.py  deploy_network_utils.py  deploy_prediction.py  deploy_schemas.py
eir/experiment_io/: configs_io.py  experiment_io.py  input_object_io.py  io_utils.py  label_transformer_io.py  output_object_io.py
eir/interpretation/: interpret_array.py  interpret_image.py  interpret_omics.py  interpret_sequence.py  interpret_tabular.py  interpretation.py  interpretation_utils.py
eir/models/: __init__.py  fusion.py  fusion_linear.py  fusion_mgmoe.py  layers.py  model_setup.py  model_training_utils.py  models_base.py  models_linear.py  models_utils.py
eir/predict_modules/: predict_activations.py  predict_attributions.py  predict_config.py  predict_config_validation.py  predict_data.py  predict_input_setup.py  predict_sequence_output.py  predict_tabular_input_setup.py  predict_tabular_output.py  predict_target_setup.py  predict_utils.py
eir/serve_modules/: serve_api.py  serve_api_models.py  serve_experiment_io.py  serve_input_setup.py  serve_network_utils.py  serve_post_process.py  serve_prediction.py
eir/setup/: config.py  config_validation.py  input_setup.py  output_setup.py  schemas.py  setup_utils.py  tensor_broker_setup.py
eir/target_setup/: target_label_setup.py  target_setup_utils.py
eir/train_utils/: __init__.py  criteria.py  distributed.py  evaluation.py  handlers_sequence_output.py  latent_analysis.py  lr_scheduling.py  metrics.py  optim.py  optimizers.py  step_logic.py  train_handlers.py  train_handlers_sequence_output.py  utils.py
eir/utils/: logging.py
eir/visualization/: interpretation_visualization.py  sequence_visualization_forward_port.py  visualization_funcs.py
human_origins_supervised/: predict.py  train.py
human_origins_supervised/data_load/: common_ops.py  data_loading_funcs.py  data_utils.py  datasets.py  label_setup.py
human_origins_supervised/label_loading_ops/: common_ops.py
human_origins_supervised/models/: data_load.py  embeddings.py  extra_inputs_module.py  layers.py  model_utils.py  models.py
human_origins_supervised/train_utils/: __init__.py  activation_analysis.py  benchmark.py  evaluation.py  lr_scheduling.py  metric_funcs.py  metrics.py  misc_funcs.py  optimizers.py  train_handlers.py  utils.py
human_origins_supervised/visualization/: activation_visualization.py  model_visualization.py  targeted_visualizations.py  visualization_funcs.py
misc/: Dockerfile  check_versions.py  chromosome_locations.txt  release.py  update_reqs.sh
reports/cprofiles/: 1000_10_2_cpu.prof  full_10_6_gpu_npuint8_lb.prof  full_10_6_gpu_unpackbits_lb.prof
snp_pred/: configuration.py  predict.py  train.py
snp_pred/data_load/: common_ops.py  data_augmentation.py  data_loading_funcs.py  data_utils.py  datasets.py  label_setup.py
snp_pred/interpretation/: interpret_omics.py  interpret_tabular.py  interpretation.py
snp_pred/models/: extra_inputs_module.py  fusion.py  fusion_mgmoe.py  layers.py  model_training_utils.py  model_utils.py  models.py  models_base.py  models_cnn.py  models_linear.py  models_mgmoe.py  models_mlp.py  models_split_mlp.py
snp_pred/train_utils/: activation_analysis.py  evaluation.py  lr_scheduling.py  metrics.py  optimizers.py  train_handlers.py  utils.py
snp_pred/visualization/: activation_visualization.py  interpretation_visualization.py  visualization_funcs.py
src/eir/: __init__.py  build_module.py  predict.py  serve.py  train.py
tests/: .test_durations  conftest.py  test_analysis.py  test_benchmark.py  test_data_filter_ops.py  test_data_load.py  test_data_loading_funcs.py  test_datasets.py  test_embeddings.py  test_label_setup.py  test_model_utils.py  test_modelling.py  test_models.py  test_predict.py  test_snp_identification.py  test_train.py  test_visualization.py
tests/setup_tests/: fixtures_create_configs.py  fixtures_create_data.py  fixtures_create_datasets.py  (+4 more)
(+1183 files in other folders)
