[tool.poetry]
name = "eir-dl"
version = "0.2.0"
description = ""
license = "AGPLv3"
authors = ["Arnor Sigurdsson"]
packages = [
    { include="eir", from="." },
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = "^2.3.1"
torchvision = "^0.18.0"
py = "^1.11.0"
matplotlib = "^3.9.0"
pytorch-ignite = "^0.5.0.post2"
tqdm = "^4.66.4"
sympy = "^1.12.1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.0"
joblib = "^1.4.2"
tensorboard = "^2.17.0"
ConfigArgParse = "^1.7"
torch-optimizer = "^0.3.0"
adabelief-pytorch = "^0.2.0"
dill = "^0.3.3"
aislib = "^0.1.14a0"
colorama = "^0.4.4"
torchtext = "^0.18.0"
transformers = "^4.42.3"
sentencepiece = "^0.2.0"
ipython = "^8.26.0"
timm = "^1.0.7"
captum = "^0.7.0"
deeplake = "^3.9.12"
aioboto3 = "^13.1.0"
termcolor = "^2.4.0"
tokenizers = "^0.19.1"
pyarrow = "^16.1.0"
einops = "^0.7.0"
umap-learn = "^0.5.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.8.0"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
pytest = "^8.2.2"
tox = "^4.16.0"
flake8 = "^7.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
coverage = "^7.5.4"
snakeviz = "^2.2.0"
pytest-cov = "^5.0.0"
pynvim = "^0.5.0"
pre-commit = "^3.7.1"
gpustat = "^1.1.1"
black = "^24.4.2"
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-copybutton = "^0.5.2"
tomlkit = "^0.12.1"
gdown = "^5.2.0"
hypothesis = "^6.104.2"
pdf2image = "^1.17.0"
vulture = "^2.11"
mypy = "^1.10.1"
types-pyyaml = "^6.0.12.20240311"
isort = "^5.13.2"
pytest-split = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eirtrain = "eir.train:main"
eirpredict = "eir.predict:main"
eirserve = "eir.serve:main"

[tool.isort]
profile = "black"