[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eir-dl"
version = "0.20.1"
description = "Deep learning framework for genomics and multi-modal data"
license = { text = "AGPLv3" }
authors = [
    { name = "Arnor Sigurdsson" }
]
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "pandas>=2.2.2",
    "numpy~=2.1.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.4",
    "sympy>=1.12.1",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.0",
    "ConfigArgParse>=1.7",
    "torch-optimizer>=0.3.0",
    "adabelief-pytorch>=0.2.0",
    "aislib>=0.3.0",
    "colorama>=0.4.4",
    "transformers==4.50.3",
    "ipython>=8.29.0",
    "timm>=1.0.7",
    "captum>=0.7.0",
    "aioboto3>=13.1.0",
    "termcolor>=2.4.0",
    "tokenizers>=0.21.0",
    "pyarrow>=18.0.0",
    "einops>=0.8.0",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "lifelines>=0.30.0",
    "websocket-client>=1.8.0",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "starlette>=0.41.2",
    "websockets>=14.0",
    "torchsurv>=0.1.4",
    "datasets>=3.2.0",
    "lightning>=2.5.0.post0",
    "polars>=1.27.0",
    "diffusers>=0.33.1",
    "deeplake>=4.2.4",
    "torch==2.7",
]

[project.scripts]
eirtrain = "eir.train:main"
eirpredict = "eir.predict:main"
eirserve = "eir.serve:main"

[project.urls]
repository = "https://github.com/arnor-sigurdsson/EIR"

[tool.hatch.build.targets.wheel]
packages = ["src/eir"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=8.2.2",
    "tox>=4.16.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "coverage>=7.5.4",
    "snakeviz>=2.2.0",
    "pytest-cov>=6.0.0",
    "pynvim>=0.5.0",
    "pre-commit>=4.0.1",
    "gpustat>=1.1.1",
    "Sphinx>=8.0.2",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "tomlkit>=0.13.2",
    "gdown>=5.2.0",
    "hypothesis>=6.104.2",
    "pdf2image>=1.17.0",
    "vulture>=2.11",
    "mypy>=1.10.1",
    "types-pyyaml>=6.0.12.20240311",
    "pytest-split>=0.10.0",
    "deptry>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    "src/eir/train_utils/optimization_modules/soap.py",
    "src/eir/train_utils/ignite_port/*"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C4",
    "SIM",
    "N",
    "UP",
    "W",
]
ignore = ["N812", "SIM102"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["eir"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"train.py" = ["E402"]
"target_setup_utils.py" = ["N803"]
"interpretation.py" = ["E402"]
"deeplake_ops.py" = ["E402"]
"label_setup.py" = ["E402"]
"tests/*" = ["S101"]
"setup_targets_test_data.py" = ["SIM115"]
"tests/test_setup/test_config.py" = ["SIM115"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["src/eir/train_utils/optimization_modules/soap.py"]
